--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Twitter Bot that will send a dumb excuse each day",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   "homepage": "https://github.com/HaCoBa/uneExcuseBidonParJour#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "nodemon": "^2.0.7",
     "twitter": "^1.7.1"
   }
 }
