--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
   "homepage": "https://github.com/HaCoBa/uneExcuseBidonParJour#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
     "nodemon": "^2.0.7",
+    "pg": "^8.5.1",
     "twitter": "^1.7.1"
   }
 }
