--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Twitter Bot that will send a dumb excuse every 6 h each day",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start" : "node index.js"
   },
   "repository": {
     "type": "git",
